configuration file which was previously used only by B<nnrpd> is renamed
to F<motd.nnrpd> (B<innupgrade> takes care of the rename).  B<innd> uses
the new F<motd.innd> file in I<pathetc> for its message of the day.

=item *

Fixed an issue at configure time that made INN wrongly assume that OpenBSD
(4.6) didn't support Unix-domain sockets.  Thanks to Wim Lewis for the patch.

=item *

Fixed an issue in the Python access hook for B<nnrpd>:  it has not been
working since S<Python 2.5> on 64-bit platforms, owing to a change to
Python's C API, using a new Py_ssize_t type definition instead of int.
Thanks to Raphael Barrois for the patch.

=item *

Improve the stability of the Perl filters for B<innd> and B<nnrpd>:
properly save and restore the stack pointer when needed.

=item *

The Injection-Date: header, when present, is now used by B<innd> and
B<makehistory> to determine the posting date of an article.  Otherwise,
the Date: header is used.

=item *

B<controlchan> now imposes a date cutoff on processing control articles.
The I<artcutoff> parameter set in F<inn.conf> is used.  Otherwise, without
that cutoff, old control articles could be maliciously reinjected into
Usenet, and replayed.  (An unsigned Injection-Date: header field could be
added to an article that only had a Date: header field.)  A new B<-c> flag
has been added to B<controlchan> to disable the cutoff check, if needed
(usually when manually invoking the program).

=item *

B<nnrpd> no longer adds or updates the Path: header field when an article is
forwarded to a moderator.  It could otherwise lead to rejects at injection
time when the article was approved by the moderator.

=item *

The X-Trace: header field was not properly generated when an article
was locally posted.  The field mentioning the IP address was skipped,
resulting in a wrong syntax for this header.  The local "127.0.0.1" IP
address is now used.  Besides, C<localhost> is now mentioned instead of